--- a/packages/a/package.json
+++ b/packages/a/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mono/a",
-  "version": "1.1.1",
+  "version": "1.1.2",
   "main": "./dist/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -10,7 +10,8 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "@mono/a": "workspace:*",
+    "@mono/a": "1.1.2",
     "abbrev": "^1.1.1"
-  }
+  },
+  "gitHead": "148e0833b69dbeadc58258ff8fc5e934891c88b7"
 }
