--- a/packages/b/package.json
+++ b/packages/b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "@mono/b",
-  "version": "1.1.1",
+  "version": "1.1.2",
   "description": "",
   "main": "./dist/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "gitHead": "148e0833b69dbeadc58258ff8fc5e934891c88b7"
 }
